# fronius-ha-dual-mppt

./: .gitignore  Dockerfile  Makefile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.kiro/specs/diagnostic-sensors/: design.md  requirements.md  tasks.md
.kiro/specs/fronius-modbus-interface/: design.md  requirements.md  tasks.md
src/: __init__.py  logging_config.py
src/fronius_modbus/: __init__.py  __main__.py  config.py  controller.py  modbus_client.py  mqtt_publisher.py
tests/: __init__.py
tests/unit/: test_basic_functionality.py  test_config.py  test_controller_diagnostic_resilience.py  test_diagnostic_graceful_degradation.py  test_error_handling.py  test_modbus_client.py  test_mqtt_publisher.py
